# pw3270

./: .gitignore  .gitmodules  AUTHORS  CHANGELOG  ChangeLog.xsl  LICENCA  Makefile.in  PKGBUILD.mingw  README.md  apt.sh  autogen.sh  bootstrap.sh  colors.conf  configure.ac  debian.changelog  debian.control  debian.rules  get_versions.sh  gitsync.sh  hllapipacket.sh  install-cross.sh  lgtm.yml  lib3270.pc.in  makedeb.sh  makegtkruntime.sh.in  memchk.sh  meson.build  msys-run.sh  pushtag.sh  pw3270-i686-no-gtk.nsi.in  pw3270-i686.nsi.in  pw3270-x86_64-no-gtk.nsi.in  pw3270-x86_64.nsi.in  pw3270.cbp  pw3270.dsc  pw3270.komodoproject  pw3270.nsi.in  pw3270.pc.in  pw3270.spec.in  update.sh  (+7 more)
.github/: auto_assign.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: codeql-analysis.yml  codeql.yml  macos.yml  macpkg.yml  msys2.yml  publish.yml  winpkg.yml
android/: .project  AndroidManifest.xml  Makefile  build.xml  lib3270NDK.cbp  stacktrace.sh
android/jni/: Android.mk  actions.cpp  globals.h  html.cpp  main.cpp  misc.cpp  text.cpp
arch/: PKGBUILD
branding/: Makefile.in  appdata.xml.in  keypad.metainfo.xml.in  launcher.desktop.in  metainfo.xml.in  mime.xml.in
charsets/: Makefile.in  bracket.xml
conf/: colors.conf
debian/: changelog  control  makedeb.sh  postrm  pw3270.dsc  rules  shlibs
devel/: lib3270.pc.in
flathub/: br.app.pw3270.terminal.yml  br.app.pw3270.yml
flatpak/: br.eti.werneck.pw3270.yml
keypad/: 00-right.xml  10-bottom.xml
locale/: Makefile.in  pt_BR.po  pw3270.pot
mac/: Info.plist  bundle  ci-build.sh  pw3270.bundle  pw3270.bundle.in  pw3270.icns  pw3270.modules
macos/: Info.plist  bundle  launcher.sh
man/: Makefile.in
man/man1/: pw3270.1
man/man5/: pw3270.5
modules/lib3270/: .gitignore  Makefile.in  README.md  gitsync.sh  lib3270.cbp
nsi/: Makefile.in  header-i686-no-gtk.nsi.in  header-i686.nsi.in  header-x86_64-no-gtk.nsi.in  header-x86_64.nsi.in  hllapi-init.nsi  hllapi.nsi.in  j3270-init.nsi  java-extension.nsi  main-begin-i686.nsi.in  main-begin-x86_64.nsi.in  main-end.nsi.in  oninit-i686.nsi.in  oninit-x86_64.nsi.in  python-extension.nsi  runtime-init.nsi.in  runtime.nsi.in  rx3270-init.nsi  rx3270.nsi.in  sdk.nsi.in  uninstall-i686.nsi.in  uninstall-x86_64.nsi.in
po/: POTFILES.in  meson.build  pt_BR.po
pw3270.xcodeproj/: project.pbxproj
pw3270.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
rpm/: _service  _servicedata  pw3270.spec  rpmlintrc
schemas/: Makefile.in  application.gschema.xml  application.gschema.xml.in  window.gschema.xml.in
schemas/common/: window.gschema.xml.in
schemas/linux/: application.gschema.xml.in  window.gschema.xml.in
schemas/macos/: application.gschema.xml.in  window.gschema.xml.in
schemas/windows/: application.gschema.xml.in  window.gschema.xml.in
scripts/: convert-sh
sdk/: Makefile.in  lib3270.pc.in  pw3270.pc.in
src/actions/: abstract.c  actions.cbp  lib3270.c  private.h  window.c
src/android/: AndroidManifest.xml  Makefile  lib3270NDK.cbp
src/classlib/: Makefile  Makefile.in  class.mak.in  classlib.cbp  exception.cc  local.cc  main.cc  module.cc  private.h  pw3270class.h  remote.cc  session.cc  testprogram.cc
src/gtk/: Makefile  Makefile.in  actions.c  colors.c  dialog.c  globals.h  main.c  mainwindow.c  print.c  pw3270-GTK.cbp  valgrind.suppression  window.c
src/include/: ansic.h  config.h.in  kybdc.h  lib3270.h  plugin.mak.in  pw3270.h  pw3270cpp.h  rules.mak  rules.mak.in  shlobj_missing.h  v3270.h  xioc.h  xl.h
src/java/: Makefile.in  actions.cc  call.cc  clipboard.cc  connect.cc  cursor.cc  dialog.cc  field.cc  getset.cc  info.cc  jni3270.cbp  keyboard.cc  main.cc  plugin.cc  private.h  run.sh  startstop.cc  terminal.java  testprogram.java
src/lib3270/: 3270ds.h  Makefile.in  X3270.xad  XtGlue.c  actions.c  actionsc.h  ansi.c  ansic.h  api.h  apl.c  aplc.h  appres.h  arpa_telnet.h  bounds.c  charset.c  charset.h  charsetc.h  childc.h  connect.c  ctlr.c  ctlr.h  ctlrc.h  dialogc.h  ft.c  ft_cut.c  ft_cutc.h  ft_dft.c  ft_dftc.h  ftc.h  globals.h  glue.c  gluec.h  host.c  hostc.h  html.c  icmdc.h  init.c  iocalls.c  keypadc.h  kybd.c  (+63 more)
src/libpw3270cpp/: Makefile.in  classlib.cbp  exception.cc  local.cc  module.cc  private.h  remote.cc  service.cc  session.cc  testprogram.cc
src/loffice/: Makefile.in  connect.cc  description.txt  get.cc  globals.hpp  info.cc  init.cc  loffice3270.cbp  pw3270.idl  service.cc  set.cc  testmacros.odt  testprogram.cc
src/main/: builder.c  main.c  placeholders.c  private.h  tools.c
src/mkfb/: mkfb.c
src/openoffice/: Makefile.in  connect.cc  get.cc  globals.hpp  init.cc  loffice3270.cbp  manifest.xml.in  pw3270.idl  service.cc  set.cc  testmacros.odt  testprogram.cc
src/oxt/: Makefile.in  actions.cxx  connection.cxx  description.xml.in  get.cxx  globals.hpp  info.cc  local.cxx  loffice3270.cbp  main.cxx  manifest.xml.in  pw3270.idl  pw3270OXT.cbp  remote.cxx  research.sh  service.cc  set.cxx  testprogram.cc  testprogram.cxx
src/php/: Makefile.in  get.cc  init.cc  main.cc  misc.cc  php.ini  php3270.cbp  php3270.h  php3270.h.in  sample.php  set.cc
src/pw3270/: Makefile.in  actions.c  charset.c  colors.c  dialog.c  filetransfer.c  filetransfer.h  fonts.c  globals.h  hostdialog.c  macros.c  main.c  plugin.c  print.c  private.h  pw3270-GTK.cbp  resources.rc  resources.rc.in  tools.c  (+3 more)
subprojects/: lib3270.wrap  libv3270.wrap
ui/: 00default.xml  10functions.xml  10keypad.xml  80java.xml  80javasamples.xml  98trace.xml  99debug.xml  Makefile.in  application.xml  default.xml  macos.ui.xml  rexx.xml  window.xml  windows.ui.xml  xml2pot.c
win/: building_on_windows-the-hard-way.txt  building_windows_on_SuSE-the-easy-way.txt  bundle  bundle.common  bundle.cross  bundle.gtk3  bundle.in  bundle.msys  ci-build.sh  copydeps.sh.in  force_inet_ntop.patch  gtk.css  install-cross.sh  makegtkruntime.sh.in  makeruntime.sh  makeruntime.sh.in  mingw32-pw3270.spec  mingw64-pw3270-unstable.spec  mingw64-pw3270.spec  msys2-install-tn3270-libs.sh  pack.sh  pw3270.nsi.in  win32-configure  win64-configure
(+462 files in other folders)
